# MyQtProject

./: CMakeLists.txt  MyQtProject_en_EN.ts  README.md  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  properties.cpp  properties.h  resources.qrc
dialogs/: dialogbody.cpp  dialogbody.h  dialoginfocontent.cpp  dialoginfocontent.h  dialogtextedit.cpp  dialogtextedit.h  dialogvalueslist.cpp  dialogvalueslist.h  splashscreen.cpp  splashscreen.h
helpers/: helper_common.cpp  helper_common.h  helpergraphics.cpp  helpergraphics.h  widgethelper.cpp  widgethelper.h
interface/: edittextwidget.cpp  edittextwidget.h  lineeditselectfile.cpp  lineeditselectfile.h  loggingcategories.cpp  loggingcategories.h  separators.cpp  separators.h
resources/css/: main.css
resources/html/: about_body.html
